# SolarEcho

./: README.md  pyproject.toml  requirements.txt
src/solarecho/: main.py  nasa_client.py  synthesizer.py
